--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ body {
   left: 0;
   width: 100%;
   height: 72px;
-  z-index: 1;
+  z-index: 10;
   background: #Fff;
   -webkit-box-shadow: 0px 1px 14px 3px rgba(34, 60, 80, 0.6);
           box-shadow: 0px 1px 14px 3px rgba(34, 60, 80, 0.6);
@@ -118,6 +118,30 @@ body {
 
 .header .container {
   padding: 10px 15px;
+}
+
+@-webkit-keyframes anim {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes anim {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
 .header__inner {
@@ -148,6 +172,7 @@ body {
 .header__logo .logo-link {
   font-size: 28px;
   font-weight: bold;
+  color: #000;
 }
 
 .header__logo span {
@@ -194,6 +219,21 @@ body {
   width: 100%;
 }
 
+.header__nav .form-link {
+  background: #002d93;
+  border: 2px solid #002d93;
+  outline: none;
+  border-radius: 5px;
+  padding: 6px 16px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.header__nav .form-link:hover {
+  border: 2px solid #003dca;
+  background: #003dca;
+}
+
 .header__contact {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -221,6 +261,10 @@ body {
   margin: 0 auto;
 }
 
+.wrapper h3 {
+  margin-bottom: 20px;
+}
+
 .head-section {
   position: relative;
   height: calc(100vh - 72px);
@@ -233,6 +277,18 @@ body {
   margin-top: 72px;
 }
 
+.head-section::before {
+  position: absolute;
+  content: "";
+  background-image: url("./../../img/test1.png");
+  background-repeat: no-repeat;
+  width: 380px;
+  height: 340px;
+  bottom: 0;
+  left: 10%;
+  z-index: 0;
+}
+
 .head-section__inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -241,29 +297,161 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 3rem;
+  position: relative;
 }
 
 .head-section__title {
   max-width: 850px;
-  padding: 0 15px;
   color: #fff;
 }
 
 .head-section__title h1 {
+  margin-bottom: 2%;
   font-size: 32px;
 }
 
-.head-section__action {
+.application__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 40px 20px;
+  border-radius: 5px;
+}
+
+.application__form .title-form {
+  color: #fff;
+  padding: 0 15px 20px;
+  text-align: center;
+  font-size: 20px;
+  min-width: 320px;
+  max-width: 400px;
+}
+
+.application__form .input__wrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.application__form .input__file {
+  width: 0;
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+}
+
+.application__form .input__file-icon-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 8px;
+  border-right: 1px solid #fff;
+  color: #fff;
+}
+
+.application__form .input__file-button {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 250px;
+  max-width: 320px;
+  margin-bottom: 10px;
+  padding: 8px 10px;
+  background: #1bbc9b;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  border: 1px solid #1bbc9b;
+  border-radius: 3px;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.application__form .input__file-button-text {
+  line-height: 1;
+  margin-top: 1px;
+  margin-left: 10px;
+}
+
+.application__form button {
+  display: none;
+  height: 50px;
+  margin-bottom: 10px;
+  padding: 6px 16px;
+  background: #002d93;
+  border: 2px solid #002d93;
+  outline: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.application__form button:hover {
+  border: 2px solid #003dca;
+  background: #003dca;
+}
+
+.application__form > span {
+  color: #fff;
+  font-size: 12px;
+}
+
+.callback {
+  height: 300px;
+  background-image: url("./../../img/bg-about3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.callback__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
 }
 
 .call-back__form {
@@ -280,11 +468,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  -webkit-box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.8) inset;
-          box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.8) inset;
-  padding: 40px 20px;
   border-radius: 5px;
 }
 
@@ -292,42 +475,48 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.call-back__form .call-back__group label {
-  margin-bottom: 10px;
-}
-
-.call-back__form .call-back__group label:last-child {
-  margin-bottom: 0;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .call-back__form .title-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #fff;
   padding: 0 15px 20px;
   text-align: center;
-  font-size: 20px;
+  font-size: 26px;
   min-width: 320px;
-  max-width: 350px;
+}
+
+.call-back__form label {
+  margin-right: 20px;
 }
 
 .call-back__form .input-form {
-  width: 100%;
   border-radius: 5px;
-}
-
-.call-back__form input {
+  outline: none;
   padding: 7px 8px;
   border: 1px solid #000;
+  font-size: 20px;
 }
 
 .call-back__form select {
+  border: 1px solid #000;
   padding: 6px 8px;
+  border-radius: 5px;
+  outline: none;
   border: 1px solid;
+  font-size: 20px;
 }
 
 .call-back__form button {
@@ -349,6 +538,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   height: 100%;
 }
 
@@ -367,10 +558,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-width: 320px;
 }
 
 .services__tab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 350px;
   margin-bottom: 10px;
   padding: 8px 8px;
   cursor: pointer;
@@ -395,7 +589,6 @@ body {
 
 .services__content {
   display: none;
-  outline: 1px solid;
   width: 100%;
   padding: 8px 8px;
 }
@@ -404,13 +597,7 @@ body {
   display: block;
 }
 
-.services__tab {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.application__form {
+.reviews__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -418,85 +605,146 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.reviews__slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
-          box-shadow: 0px 0px 100px 100px rgba(0, 0, 0, 0.6) inset;
-  padding: 30px 20px;
+  width: 100%;
+  min-width: 0;
+  margin: 0 auto;
+  padding: 0 50px;
+  height: 100%;
 }
 
-.application__form .title-form {
-  color: #fff;
-  padding: 0 0 20px;
-  text-align: center;
+.reviews__slider .slick-list {
+  height: 100%;
+  min-width: 0;
+  overflow: hidden;
+}
+
+.reviews__slider .slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-width: 0;
+  height: 100%;
+  padding: 50px 0;
+}
+
+.reviews__slider .slick-arrow {
+  position: absolute;
+  top: 50%;
+  z-index: 1;
+  font-size: 0;
+  width: 30px;
+  height: 50px;
+}
+
+.reviews__slider .slick-arrow.slick-prev {
+  left: 0;
+  background: url("./../../img/la.svg") 0 0/100% no-repeat;
+}
+
+.reviews__slider .slick-arrow.slick-next {
+  right: 0;
+  background: url("./../../img/ra.svg") 0 0/100% no-repeat;
+}
+
+.reviews__slider .slick-prev:before {
+  content: '';
+}
+
+.reviews__slider .slick-next:before {
+  content: '';
+}
+
+.slick-initialized .slick-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.review__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+          box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  padding: 20px;
+  max-width: 100%;
+  margin: 0 10px;
+  height: 230px;
+  border-radius: 5px;
+  -webkit-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  background: #fff;
+}
+
+.review__item-title {
+  font-weight: bold;
+  font-style: italic;
+}
+
+.review__item-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.review__item.slick-center {
+  -webkit-transform: scale(1.4);
+      -ms-transform: scale(1.4);
+          transform: scale(1.4);
+}
+
+.review__item.slick-center .review__item-title {
   font-size: 20px;
 }
 
-.application__submit {
-  background: #002d93;
-  border: 2px solid #002d93;
-  color: #fff;
-  padding: 8px 8px;
-  cursor: pointer;
-  border-radius: 5px;
+.review__item.slick-center .review__item-text {
+  font-size: 10px;
 }
 
-.application__submit:hover {
-  border: 2px solid #003dca;
-  background: #003dca;
-}
-
-.input__wrapper {
-  position: relative;
-}
-
-.input__file {
-  opacity: 0;
-  visibility: hidden;
-  position: absolute;
-}
-
-.input__file-icon-wrapper {
-  padding: 8px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  border-right: 1px solid #fff;
-}
-
-.input__file-button-text {
-  line-height: 1;
-  margin-top: 1px;
-}
-
-.input__file-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  margin: 0 auto;
-  padding: 8px 8px;
-  background: #1bbc9b;
-  color: #fff;
-  font-size: 1.125rem;
-  font-weight: 700;
-  border-radius: 3px;
-  cursor: pointer;
+.review__item.slick-center .review__item-info {
+  font-size: 10px;
 }
 
 .contact__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+          box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  padding: 30px 20px;
+}
+
+.contact__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -712,6 +960,29 @@ body {
   color: #a0a0a0;
 }
 
+.footer__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+.footer__logo .logo-link {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.footer__logo span {
+  font-size: 14px;
+}
+
 .footer__logo-link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -724,6 +995,7 @@ body {
           align-items: center;
   background: #fff;
   margin-bottom: 10px;
+  padding: 10px 0;
 }
 
 .footer__logo-img {
@@ -751,4 +1023,143 @@ body {
 
 .footer__menu-link:hover {
   color: #fff;
+}
+
+@media (max-width: 575.98px) {
+  .header .container {
+    padding: 5px 10px;
+  }
+
+  .header {
+    height: 50px;
+  }
+
+  .header__inner {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .header__logo {
+    font-size: 14px;
+  }
+
+  .header__logo .logo-link {
+    font-size: 18px;
+  }
+
+  .header__logo span {
+    font-size: px;
+  }
+
+  .header__nav {
+    display: none;
+  }
+
+  .header__contact {
+    display: none;
+  }
+
+  .head-section {
+    height: calc(100vh - 50px);
+    background-position: center;
+    margin-top: 50px;
+  }
+
+  .head-section::before {
+    display: none;
+  }
+
+  .head-section__inner {
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0;
+  }
+
+  .head-section__title {
+    margin-bottom: 7%;
+  }
+
+  .head-section__title h1 {
+    margin-bottom: 7%;
+    font-size: 20px;
+  }
+
+  .head-section__title span {
+    font-size: 12px;
+  }
+
+  .application__form {
+    padding: 20px 20px;
+  }
+
+  .application__form .title-form {
+    font-size: 12px;
+    padding: 0 0 20px;
+    min-width: 0;
+  }
+
+  .application__form .input__file-button {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 6px 8px;
+    font-size: 14px;
+  }
+
+  .application__form button {
+    height: 44px;
+    font-size: 14px;
+  }
+
+  .application__form > span {
+    font-size: 10px;
+  }
+
+  .callback {
+    display: none;
+  }
+
+  .services__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+
+  .services__tab-group {
+    margin-right: 0;
+  }
+
+  .services__tab {
+    width: 100%;
+  }
+
+  .reviews {
+    display: none;
+  }
+
+  .contact {
+    display: none;
+  }
+
+  .aboutus {
+    display: none;
+  }
+
+  .license {
+    display: none;
+  }
+
+  .flags {
+    display: none;
+  }
+
+  .footer {
+    display: none;
+  }
 }
