--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1055,6 +1055,45 @@ body {
   display: none;
 }
 
+
+.success-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 50;
+}
+.success-modal--active {
+  display: flex;
+}
+.modal__inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 320px;
+  min-width: 320px;
+  height: auto;
+  background: #fff;
+  border-radius: 15px;
+  padding: 15px ;
+}
+.modal__title {
+  margin-bottom: 10px;
+}
+.modal__text {
+  text-align: center;
+}
+
+
+
+
 @media (max-width: 575.98px) {
   .header .container {
     padding: 5px 10px;
@@ -1392,4 +1431,76 @@ body {
   .mobile-bar .mobile__nav-link {
     color: #000;
   }
+}
+@media (min-width: 889.99px) and (max-width: 1139.99px) {
+
+  .header {
+    height: 50px;
+  }
+  .header .container {
+      display: flex;
+      justify-content: center;
+  
+  }
+  .header__inner {
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: space-between;
+  }
+
+  .header__logo .logo-link {
+    font-size: 18px;
+  }
+
+  .header__logo span {
+    font-size: 12px;
+  }
+
+  .header__nav .menu__item {
+    margin-right: 20px;
+  }
+  .header__nav .menu__link {
+    font-size: 14px;
+  }
+  .header__nav .form-link {
+    padding: 4px 8px;
+  }
+  .header__contact .header__phone {
+    font-size: 18px;
+  }
+  .header__contact .header__email {
+    font-size: 14px;
+  }
+
+  .head-section__title {
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
+  .head-section__action {
+    margin-left: auto;
+  }
+
+
+  .call-back__form .input-form {
+    font-size: 14px;
+  }
+  .call-back__form select {
+    font-size: 14px;
+  }
+  .call-back__form button {
+    font-size: 14px;
+  }
+
+  .review__item.slick-center .review__item-title {
+    font-size: 16px;
+  }
+  .review__item-text {
+    font-size: 12px;
+  }
+ 
+
+  .review__item.slick-center {
+    width: 400px !important;
+}
 }
